objects/LatAm_Country_and_States__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings stores the state names for LatAm countries</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LatAm Country and States</label>
</CustomObject>